--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'com.android.application'
 
+
+apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
+
 android {
+    compileOptions.incremental = false
     compileSdkVersion 27
     defaultConfig {
         applicationId "bookfair.android"
@@ -9,6 +14,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+
     }
     buildTypes {
         release {
@@ -16,13 +23,57 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    final DAGGER_VERSION = '2.7'
+    final APP_COMPAT_VERSION = '27.1.1'
+
+    implementation "com.google.dagger:dagger:$DAGGER_VERSION"
+    annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
+
+    implementation "com.android.support:appcompat-v7: $APP_COMPAT_VERSION"
+    implementation "com.android.support:design:$APP_COMPAT_VERSION"
+    implementation "com.android.support:recyclerview-v7:$APP_COMPAT_VERSION"
+    implementation "com.android.support:support-v4:$APP_COMPAT_VERSION"
+    implementation "com.android.support:support-v4:$APP_COMPAT_VERSION"
+    implementation('com.weiwangcn.betterspinner:library-material:1.1.0') {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+    }
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'net.danlew:android.joda:2.9.4.1'
+    implementation 'org.parceler:parceler-api:1.1.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.birbit:android-priority-jobqueue:2.0.0-alpha2'
+    implementation 'com.jonathanfinerty.once:once:1.0.3'
+    implementation 'com.github.simonpercic:oklog3:2.2.0'
+    implementation 'com.mikepenz:iconics-core:2.9.3@aar'
+    implementation 'com.mikepenz:iconics-views:2.9.3@aar'
+    implementation 'com.mikepenz:community-material-typeface:1.7.22.1@aar'
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.google.android.gms:play-services-vision:15.0.2'
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
+    implementation 'com.github.medyo:fancybuttons:1.8.4'
+    implementation 'com.klinkerapps:link_builder:1.6.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
 }
