--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         </activity>
         <activity android:name=".ui.activities.LoginActivity" />
         <activity android:name=".ui.activities.SignUpActivity" />
+        <activity android:name=".ui.activities.MainActivity"></activity>
     </application>
 
 </manifest>
