--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileOptions.incremental = false
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
-        applicationId "bookfair.android"
+        applicationId "com.bookfair.android"
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -30,12 +30,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:exifinterface:28.0.0'
+
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.facebook.android:facebook-android-sdk:4.41.0'
 
     final DAGGER_VERSION = '2.7'
-    final APP_COMPAT_VERSION = '27.1.1'
+    final APP_COMPAT_VERSION = '28.0.0'
 
     implementation "com.google.dagger:dagger:$DAGGER_VERSION"
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
     annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
     implementation "com.android.support:appcompat-v7: $APP_COMPAT_VERSION"
@@ -44,7 +50,7 @@ dependencies {
     implementation "com.android.support:support-v4:$APP_COMPAT_VERSION"
     implementation "com.android.support:support-v4:$APP_COMPAT_VERSION"
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'net.danlew:android.joda:2.9.4.1'
     implementation 'me.grantland:autofittextview:0.2.+'
     implementation 'com.facebook.shimmer:shimmer:0.2.0'
@@ -75,3 +81,4 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
 }
+apply plugin: 'com.google.gms.google-services'
