--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,10 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.6.0'
+        classpath 'com.google.gms:google-services:4.2.0'
 
 
 
