--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     final APP_COMPAT_VERSION = '28.0.0'
 
     implementation "com.google.dagger:dagger:$DAGGER_VERSION"
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
     annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
     implementation "com.android.support:appcompat-v7: $APP_COMPAT_VERSION"
